--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="info-section">
         <div class="info">
             <h3 class="margen-especial-izquierda">Iniciar Sesión</h3><br>
-            <a href="login.php">AQUÍ</a>
+            <a href="login.html">AQUÍ</a>
             <div class="icon">
                 <img src="imagen/os10.png" alt="Icono 1">
             </div>
@@ -27,7 +27,7 @@
         
         <div class="info">
             <h3 class="margen-especial">Inscríbete</h3><br>
-            <a href="inscripcion.php">AQUÍ</a>
+            <a href="inscripcion.html">AQUÍ</a>
             <div class="icon">
             <img src="imagen/capa.png" alt="Icono 2">
          </div>
