--- a/login.html
+++ b/login.html
@@ -30,14 +30,14 @@ if (!empty($_POST['email']) && !empty($_POST['password'])) {
 <body>
 
 <h1>INICIAR SESIÓN</h1>
-<span>  <a href="inscripcion.php">REGISTRO</a></span>
+<span>  <a href="inscripcion.html">REGISTRO</a></span>
 
-<form action="login.php" method="POST">
+<form action="login.html" method="POST">
     <input name="email" type="text" placeholder="Ingresa tu nombre usuario">
     <input name="password" type="password" placeholder="Ingresa tu Password">
     <input type="submit" value="Iniciar Sesión"><br><br>
     <!-- Agrega el enlace para restablecer la contraseña -->
-<a href="restablecer_contrasena.php">¿Olvidaste tu contraseña?</a>
+<a href="restablecer_contrasena.html">¿Olvidaste tu contraseña?</a>
 </form>
 
 <?php if (!empty($message)): ?>
