--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="bottom-left">
         
         <a href="https://www.credly.com/badges/7b9279e9-dd01-4ce0-b11f-2027dfaf55ad/public_url">Diplomados</a>
-        <a href="https://www.linkedin.com/in/danielfigueroach/">Linkedin</a>
+        <a href="https://https://www.linkedin.com/in/danieleliasfigueroachacama/">Linkedin</a>
         <a href="https://wa.me/qr/KQFJFHZLQRHXE1">Whatsapp</a>
         
     </div>
