--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 showView('fiscalizacion-view');
             } catch (error) {
                 console.error("Error al iniciar sesión:", error);
-                displayMessage('Error al iniciar sesión. Verifica tu correo y contraseña.', 'error');
+                displayMessage('Error al iniciar sesión. Por favor, asegúrate de que tu correo y contraseña sean correctos. También ten en cuenta que la funcionalidad de autenticación de correo y contraseña puede estar limitada en este entorno. Puedes crear una cuenta y verificar si el error persiste.', 'error');
             }
         }
 
